<resources>
    <string name="app_name">Playlist maker</string>
    <string name="find">Поиск</string>
    <string name="mediatecа">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="support">Написать в поддержку</string>
    <string name="arrow_forward">Пользовательское соглашение</string>
    <string name="share">Поделиться приложением</string>
    <string name="black_theme">Темная тема</string>
    <string name="back">Назад</string>
    <string name="inform">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="thanks">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="sent">Отправить письмо через:</string>
    <string name="share_uri">"Поделиться ссылкой через:"</string>
    <string name="uri">https://yandex.ru/legal/practicum_offer/</string>
    <string name="cours_uri">https://practicum.yandex.ru/profile/android-developer/</string>
    <string name="email">Thief.leroy@yandex.ru</string>
    <string name="nirvana_art">https://is5-ssl.mzstatic.com/image/thumb/Music115/v4/7b/58/c2/7b58c21a-2b51-2bb2-e59a-9bb9b96ad8c3/00602567924166.rgb.jpg/100x100bb.jpg</string>
    <string name="jackson_art">https://is5-ssl.mzstatic.com/image/thumb/Music125/v4/3d/9d/38/3d9d3811-71f0-3a0e-1ada-3004e56ff852/827969428726.jpg/100x100bb.jpg</string>
    <string name="bee_art">https://is4-ssl.mzstatic.com/image/thumb/Music115/v4/1f/80/1f/1f801fc1-8c0f-ea3e-d3e5-387c6619619e/16UMGIM86640.rgb.jpg/100x100bb.jpg</string>
    <string name="led_art">https://is2-ssl.mzstatic.com/image/thumb/Music62/v4/7e/17/e3/7e17e33f-2efa-2a36-e916-7f808576cf6b/mzm.fyigqcbs.jpg/100x100bb.jpg</string>
    <string name="guns_art">https://is5-ssl.mzstatic.com/image/thumb/Music125/v4/a0/4d/c4/a04dc484-03cc-02aa-fa82-5334fcb4bc16/18UMGIM24878.rgb.jpg/100x100bb.jpg</string>
    <string name="track_name">Track Name</string>
    <string name="artist_name">Artist Name</string>
    <string name="track_time">00:00</string>
    <string name="nothing_found">Ничего не нашлось</string>
    <string name="trouble_with_internet">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="restart">Обновить</string>
    <string name="your_search">Вы искали</string>
    <string name="duration">Длительность</string>
    <string name="album">Альбом</string>
    <string name="year">Год</string>
    <string name="genre">Жанр</string>
    <string name="country">Страна</string>
    <string name="media">Медиатека</string>
    <string name="trouble_no_playlist">Вы не создали\n ни одного плейлиста</string>
    <string name="new_playList">Новый плейлист</string>
    <string name="empty_mediateca">Ваша медиатека пуста</string>
    <string name="selected_tracks">Избранные треки</string>
    <string name="playList">Плейлисты</string>
    <string name="new_play_list">Новый плейлист</string>
    <string name="create">Создать</string>
    <string name="add_to_playList">Добавить в плейлист</string>
    <string name="name">Название*</string>
    <string name="description">Описание</string>
    <string name="trek">трек</string>
    <string name="treka">трека</string>
    <string name="trekov">треков</string>
    <string name="minut">минут</string>
    <string name="minuta">минута</string>
    <string name="minutes">минуты</string>
    <string name="edit">Редактировать</string>
    <string name="save">Сохранить</string>
    <string name="zero_minut">0 минут</string>
    <string name="zero_trecks">0 треков</string>


</resources>
