<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    android:orientation="vertical"
    android:padding="@dimen/otstup">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="24dp"
        android:orientation="vertical">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/otstup"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:clickable="true"
            android:text="@string/find"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size"
            app:cornerRadius="@dimen/radius"
            app:icon="@drawable/search"
            app:iconGravity="textStart"
            app:iconTint="@color/black" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/mediateka"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/otstup"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:text="@string/mediatecа"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size"
            app:cornerRadius="@dimen/radius"
            app:icon="@drawable/medic"
            app:iconGravity="textStart"
            app:iconTint="@color/black" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:text="@string/settings"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size"
            app:cornerRadius="@dimen/radius"
            app:icon="@drawable/settings"
            app:iconGravity="textStart"
            app:iconTint="@color/black" />

    </LinearLayout>
</LinearLayout>

