<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/image_music_search"
        android:layout_width="@dimen/size_45"
        android:layout_height="@dimen/size_45"
        android:layout_gravity="center"
        android:layout_marginStart="@dimen/dp_13"
        android:layout_marginTop="@dimen/otstyp_8"
        android:layout_marginEnd="@dimen/otstyp_8"
        android:layout_marginBottom="@dimen/otstyp_8"
        tools:src="@drawable/error_paint_internet" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/otstyp_8"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/name_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_14"
            android:layout_marginBottom="1dp"
            android:ellipsize="end"
            android:fontFamily="@font/ys_display_medium"
            android:maxLines="1"
            style="@style/dark_to_white"
            android:textSize="@dimen/text_size_small"
            tools:text="@string/track_name" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text_artists"
                style="@style/settings_card_track"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/artist_name" />

            <ImageView
                style="@style/settings_card_track"
                android:layout_width="@dimen/dp_13"
                android:layout_height="@dimen/dp_13"
                android:layout_gravity="center"
                android:src="@drawable/point" />

            <TextView
                android:id="@+id/time_music_text"
                style="@style/settings_card_track"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/track_time" />
        </LinearLayout>

    </LinearLayout>

    <ImageView
        style="@style/settings_card_track"
        android:layout_width="@dimen/icon"
        android:layout_height="@dimen/icon"
        android:layout_gravity="center"
        android:layout_marginEnd="@dimen/otstyp_12"
        android:src="@drawable/arrow_forward" />
</LinearLayout>