<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/back_settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.plmarket.search.ui.fragment.SearchFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginEnd="52dp">

        <TextView
            style="@style/color_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/otstyp_12"
            android:fontFamily="@font/ys_display_medium"
            android:text="@string/find"
            android:textFontWeight="500"
            android:textSize="@dimen/text_size_large" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:orientation="horizontal">

        <FrameLayout
            style="@style/grey_backgroundTint"
            android:layout_width="0dp"
            android:layout_height="36dp"
            android:layout_marginStart="@dimen/otstup_16"
            android:layout_marginTop="@dimen/otstyp_8"
            android:layout_marginEnd="@dimen/otstup_16"
            android:layout_weight="1"
            android:background="@drawable/rounded_framelayout">

            <ImageView
                android:id="@+id/userAgreement"
                style="@style/grey_to_dark"
                android:layout_width="@dimen/icon_19"
                android:layout_height="@dimen/icon_19"
                android:layout_gravity="start|center_vertical"
                android:layout_marginStart="@dimen/otstyp_12"
                android:src="@drawable/search" />

            <EditText
                android:id="@+id/search_edittext"
                style="@style/grey_background"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="36dp"
                android:layout_marginEnd="36dp"
                android:hint="@string/find"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:lines="1"
                android:maxLength="20"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textSize="19sp" />

            <ImageView
                android:id="@+id/clean"
                style="@style/grey_to_dark"
                android:layout_width="@dimen/icon_19"
                android:layout_height="@dimen/icon_19"
                android:layout_gravity="end|center_vertical"
                android:layout_marginEnd="@dimen/otstyp_8"
                android:src="@android:drawable/ic_menu_close_clear_cancel"
                android:visibility="gone" />

        </FrameLayout>
    </LinearLayout>


    <FrameLayout
        android:id="@+id/FL_Search_History"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible">

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:layout_gravity="center"
            android:indeterminateTint="@color/blue"
            android:visibility="gone" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rcViewHistory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/card_item" />

        <LinearLayout
            android:id="@+id/LL_searchHistory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="visible"
            >

            <TextView
                android:id="@+id/you_search"
                style="@style/dark_to_white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/otstyp_24"
                android:fontFamily="@font/ys_display_medium"
                android:text="@string/your_search"
                android:visibility="visible"
                android:textAlignment="center"
                android:textSize="19sp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/RC_searchHistory"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:itemCount="8"
                tools:listitem="@layout/card_item" />

            <Button
                android:id="@+id/clean_history"
                style="@style/delete_history" />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/messageNotFound"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/otstyp_102"
            android:orientation="vertical"
            android:visibility="gone">

            <ImageView
                android:id="@+id/imageNotFound"
                style="@style/mistakeImageNotFound"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginVertical="@dimen/otstup_16" />

            <TextView
                android:id="@+id/placeholderMessage"
                style="@style/dark_to_white"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/ys_display_medium"
                android:text="@string/nothing_found"
                android:textAlignment="center"
                android:textSize="19sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/massageNotInternet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/otstyp_102"
            android:orientation="vertical"
            android:visibility="gone">

            <ImageView
                style="@style/mistakeImageNotInternet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginVertical="@dimen/otstup_16" />

            <TextView
                android:id="@+id/placeholderMessageNotInternet"
                style="@style/dark_to_white"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/ys_display_medium"
                android:textAlignment="center"
                android:textSize="19sp"
                tools:text="@string/trouble_with_internet" />

            <Button
                android:id="@+id/RestartSearch"
                style="@style/mistakeImageNotInternet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/otstyp_24"
                android:backgroundTint="@color/black"
                android:fontFamily="@font/ys_display_medium"
                android:letterSpacing="0"
                android:text="@string/restart"
                android:textAllCaps="false"
                android:textSize="14sp"
                app:cornerRadius="54dp" />
        </LinearLayout>
    </FrameLayout>


</LinearLayout>
